--- a/src/index.html
+++ b/src/index.html
@@ -8,23 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script type="module" src="app.js" defer></script>
 </head>
 <body>
     <ul class="station-list"></ul>
-
+    
     <div class="container">
         <h1>Name: <span id="name"></span></h1>
         <h2>ID: <span id="id"></span></h2>
         <p>Date: <span id="date"></span></p>
         <p>Hour: <span id="hour"></span></p>
-        <p>Temp: <span id="temp"></span></p>
-        <p>Humi: <span id="humi"></span></p>
-
+        <p>Temperature: <span id="temp"></span></p>
+        <p>Humidity: <span id="humi"></span></p>
+        
         <div class="chart-conatiner">
             <canvas id="myChartTemp"></canvas>
             <canvas id="myChartHumi"></canvas>
+            <canvas id="myChartTime"></canvas>
         </div>
     </div>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
