updated js, labeling chars, responsive css

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,14 @@
     <ul class="station-list"></ul>
     
     <div class="container">
-        <h1>Name: <span id="name"></span></h1>
-        <h2>ID: <span id="id"></span></h2>
-        <p>Date: <span id="date"></span></p>
-        <p>Hour: <span id="hour"></span></p>
-        <p>Temperature: <span id="temp"></span></p>
-        <p>Humidity: <span id="humi"></span></p>
+        <div class="info-container">
+            <h1>Name: <span id="name"></span></h1>
+            <h2>ID: <span id="id"></span></h2>
+            <p>Date: <span id="date"></span></p>
+            <p>Hour: <span id="hour"></span></p>
+            <p>Temperature: <span id="temp"></span></p>
+            <p>Humidity: <span id="humi"></span></p>
+        </div>
         
         <div class="chart-conatiner">
             <canvas id="myChartTemp"></canvas>
