--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,11 @@
             <h2>ID: <span id="id"></span></h2>
             <p>Date: <span id="date"></span></p>
             <p>Hour: <span id="hour"></span></p>
-            <p>Temperature: <span id="temp"></span></p>
-            <p>Humidity: <span id="humi"></span></p>
+            <p class="info">Temperature: <span id="temp"></span></p>
+            <p class="info">Humidity: <span id="humi"></span></p>
+            <p class="info">Wind speed: <span id="speed"></span></p>
+            <p class="info">Pressure: <span id="pressure"></span></p>
+            <p class="info">Rainfall: <span id="rain"></span></p>
         </div>
         
         <div class="chart-conatiner">
