added feature: lineChart update, check description
linearChart is now rendering based on info that user want to {temperature, humidity, wind speed, rainfall, air pressure}

--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,15 @@
     
     <div class="container">
         <div class="info-container">
-            <h1>Name: <span id="name"></span></h1>
-            <h2>ID: <span id="id"></span></h2>
-            <p>Date: <span id="date"></span></p>
-            <p>Hour: <span id="hour"></span></p>
-            <p class="info">Temperature: <span id="temp"></span></p>
-            <p class="info">Humidity: <span id="humi"></span></p>
-            <p class="info">Wind speed: <span id="speed"></span></p>
-            <p class="info">Pressure: <span id="pressure"></span></p>
-            <p class="info">Rainfall: <span id="rain"></span></p>
+            <h1>Name: <span id="name">- - - - -</span></h1>
+            <h2>ID: <span id="id">- - - - -</span></h2>
+            <p>Date: <span id="date">- - - - -</span></p>
+            <p>Last update: <span id="hour">- - - - -</span></p>
+            <p class="info" data-type="temperature">Temperature: <span id="temp">- - - - -</span></p>
+            <p class="info" data-type="humidity">Humidity: <span id="humi">- - - - -</span></p>
+            <p class="info" data-type="windspeed">Wind speed: <span id="speed">- - - - -</span></p>
+            <p class="info" data-type="airpressure">Pressure: <span id="pressure">- - - - -</span></p>
+            <p class="info" data-type="rainfall">Rainfall: <span id="rain">- - - - -</span></p>
         </div>
         
         <div class="chart-conatiner">
